fixed line spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -148,7 +148,7 @@ footer.sticky-bottom { border-top: 1px solid #e8e8e8; padding-top: 40px; padding
 
 .education .eduimg { margin-left: 1rem; float: left; width: 80px; margin-right: 2rem; }
 
-.education .edutext { height: 80px; }
+.education .edutext { height: 85px; }
 
 .publications { margin-top: 2rem; }
 
